**** script to extract sdos

--- a/spec.html
+++ b/spec.html
@@ -5791,6 +5791,10 @@
       </emu-alg>
     </emu-clause>
   </emu-clause>
+
+  <emu-clause id="sec-sdos">
+    <h1>TEMPORARY - Syntax-Directed Operations</h1><!-- insert sdos here -->
+  </emu-clause>
 </emu-clause>
 
 <emu-clause id="sec-executable-code-and-execution-contexts">
