--- a/spec.html
+++ b/spec.html
@@ -6589,6 +6589,51 @@
       1. Return *true*.
     </emu-alg>
   </emu-clause>
+
+  <emu-clause id="sec-static-semantics-isidentifierref" type="sdo" aoid="IsIdentifierRef">
+    <h1>Static Semantics: IsIdentifierRef</h1>
+    <emu-grammar>PrimaryExpression : IdentifierReference</emu-grammar>
+    <emu-alg>
+      1. Return *true*.
+    </emu-alg>
+    <emu-grammar>
+      PrimaryExpression :
+        `this`
+        Literal
+        ArrayLiteral
+        ObjectLiteral
+        FunctionExpression
+        ClassExpression
+        GeneratorExpression
+        AsyncFunctionExpression
+        AsyncGeneratorExpression
+        RegularExpressionLiteral
+        TemplateLiteral
+        CoverParenthesizedExpressionAndArrowParameterList
+    </emu-grammar>
+    <emu-alg>
+      1. Return *false*.
+    </emu-alg>
+    <emu-grammar>
+      MemberExpression :
+        MemberExpression `[` Expression `]`
+        MemberExpression `.` IdentifierName
+        MemberExpression TemplateLiteral
+        SuperProperty
+        MetaProperty
+        `new` MemberExpression Arguments
+
+      NewExpression :
+        `new` NewExpression
+
+      LeftHandSideExpression :
+        CallExpression
+        OptionalExpression
+    </emu-grammar>
+    <emu-alg>
+      1. Return *false*.
+    </emu-alg>
+  </emu-clause>
 <!-- insert sdos here -->
 </emu-clause>
 
@@ -13024,33 +13069,6 @@
           1. Return the |ParenthesizedExpression| that is covered by |CoverParenthesizedExpressionAndArrowParameterList|.
         </emu-alg>
       </emu-clause>
-
-      <emu-clause id="sec-semantics-static-semantics-isidentifierref">
-        <h1>Static Semantics: IsIdentifierRef</h1>
-        <emu-see-also-para op="IsIdentifierRef"></emu-see-also-para>
-        <emu-grammar>PrimaryExpression : IdentifierReference</emu-grammar>
-        <emu-alg>
-          1. Return *true*.
-        </emu-alg>
-        <emu-grammar>
-          PrimaryExpression :
-            `this`
-            Literal
-            ArrayLiteral
-            ObjectLiteral
-            FunctionExpression
-            ClassExpression
-            GeneratorExpression
-            AsyncFunctionExpression
-            AsyncGeneratorExpression
-            RegularExpressionLiteral
-            TemplateLiteral
-            CoverParenthesizedExpressionAndArrowParameterList
-        </emu-grammar>
-        <emu-alg>
-          1. Return *false*.
-        </emu-alg>
-      </emu-clause>
     </emu-clause>
 
     <emu-clause id="sec-this-keyword">
@@ -14024,30 +14042,6 @@
           1. If |PrimaryExpression| is either an |ObjectLiteral| or an |ArrayLiteral|, return *true*.
           1. Return *false*.
         </emu-alg>
-        <emu-grammar>
-          MemberExpression :
-            MemberExpression `[` Expression `]`
-            MemberExpression `.` IdentifierName
-            MemberExpression TemplateLiteral
-            SuperProperty
-            MetaProperty
-            `new` MemberExpression Arguments
-
-          NewExpression :
-            `new` NewExpression
-
-          LeftHandSideExpression :
-            CallExpression
-            OptionalExpression
-        </emu-grammar>
-        <emu-alg>
-          1. Return *false*.
-        </emu-alg>
-      </emu-clause>
-
-      <emu-clause id="sec-static-semantics-static-semantics-isidentifierref">
-        <h1>Static Semantics: IsIdentifierRef</h1>
-        <emu-see-also-para op="IsIdentifierRef"></emu-see-also-para>
         <emu-grammar>
           MemberExpression :
             MemberExpression `[` Expression `]`
